[project]
name = "wallet-api"
version = "0.1.0"
description = "Wallet API with FastAPI, idempotency and concurrency handling"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Valentin Sheboldaev" }
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0"
]

---

[project.optional-dependencies]

dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0"
]

---

[tool.uv]
# uv использует lock-файл автоматически

---

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

---

[tool.mypy]
python_version = "3.11"
strict = true

---

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"